Add Initial migration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "AuthConnectionString": "Data Source=(LocalDB)\\MSSQLLocalDB;Initial Catalog=BookwormsAuth;Integrated Security=True;"
+  },
+  "Crypto": {
+    "Key": "",
+    "IV": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
