Added Error and Login pages, with ReCAPTCHA

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Recaptcha": {
+    "SiteKey": "6LflWmQsAAAAAM1_C3XOI8LooDwjZIFn-FGEDUhu",
+    "MinScore": 0.5
+  }
 }
