Add advanced password features

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,5 +16,10 @@
   "Recaptcha": {
     "SiteKey": "6LflWmQsAAAAAM1_C3XOI8LooDwjZIFn-FGEDUhu",
     "MinScore": 0.5
+  },
+  "PasswordPolicy": {
+    "MinChangeMinutes": 5,
+    "MaxAgeDays": 30,
+    "HistoryCount": 2
   }
 }
