--- a/BookwormsOnline.csproj
+++ b/BookwormsOnline.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Caching.SqlServer" Version="10.0.3" />
     <PackageReference Include="QRCoder" Version="1.7.0" />
   </ItemGroup>
 
